# speakup-speechd

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
extras/: speakup-speechd.ini  speakup-speechd.service
src/speakup_speechd/: __init__.py  __main__.py  main.py  typedef.py
tests/speakup_speechd/: __init__.py  test_parser.py  test_settings.py  test_softsynth.py  test_utils.py
